--- a/package.json
+++ b/package.json
@@ -4,16 +4,28 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/requex22/node-ajs.git"
+  },
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com/"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/requex22/node-ajs/issues"
   },
-  "homepage": "https://github.com/requex22/node-ajs#readme"
+  "homepage": "https://github.com/requex22/node-ajs#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "babel-loader": "^9.0.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  }
 }
